The new table with functions is created[Delivers #186850790]
