# models/User.model.js
@@ -1,0 +1,22 @@
+module.exports = (sequelize,Sequelize) => {
+    const User = sequelize.define("Users", {
+        id: {
+            type: Sequelize.INTEGER,
+            primaryKey: true,
+            autoIncrement: true
+        },
+        username: {
+            type: Sequelize.STRING,
+            allowNull: false
+        },
+        email: {
+            type: Sequelize.STRING,
+            allowNull: false
+        },
+        password: {
+            type: Sequelize.STRING,
+            allowNull: false
+        },
+    })
+    return User
+}
