# routes/app_routes.js
@@ -1,5 +1,6 @@
 const AnimesController = require('../controllers/AnimesController.js')
 const MangasController = require('../controllers/MangasController.js')
+const UsersController = require('../controllers/UsersController.js')
 
 module.exports =(app) => {
     app.route("/animes")
@@ -16,4 +17,11 @@ module.exports =(app) => {
         .get(MangasController.getById)
         .put(MangasController.updateById)
         .delete(MangasController.deleteById)
+    app.route("/users")
+        .get(UsersController.getAll) //get all animes as list
+        .post(UsersController.createNew)
+    app.route("/users/:id")
+        .get(UsersController.getById)
+        .put(UsersController.updateById)
+        .delete(UsersController.deleteById)
 }
